WHITE-PAPER/reviewers/packages/v1/funding/PACKAGE_MANIFEST.md
# Review Package: FUNDING

**Generated:** 2025-12-16 00:21:53
**Target Venue:** NSF / DARPA / Open Philanthropy
**Total Size:** 68.6 KB
**Total Files:** 6

---

## Description

Funding proposal package (NSF/DARPA)

---

## Reading Order

Start with these files in order:

1. `submissions/funding/README.md`
2. `submissions/funding/LLM_Project_Nyquist_Consciousness.md`
3. `theory/MINIMUM_PUBLISHABLE_CLAIMS.md`

---

## Contents

| Category | Files | Size |
|----------|-------|------|
| submissions/ | 2 files | 24.8 KB |
| theory/ | 2 files | 24.7 KB |
| guides/ | 2 files | 19.2 KB |

**Total:** 6 files, 68.6 KB

---

## File Listing

### submissions/

- `submissions\funding\LLM_Project_Nyquist_Consciousness.md` (20.3 KB)
- `submissions\funding\README.md` (4.5 KB)

### theory/

- `theory\B-CRUMBS.md` (16.9 KB)
- `theory\MINIMUM_PUBLISHABLE_CLAIMS.md` (7.8 KB)

### guides/

- `guides\REPRODUCIBILITY_README.md` (9.7 KB)
- `guides\summary_statistics.md` (9.4 KB)

---

## What's NOT Included

- PDF files including 14MB arxiv PDF (use `--include-pdf` to add)
- Other publication path content
- Large binary files

---

## Review Instructions

Please review this package for:

1. **Accuracy of claims** - Are statements supported by evidence?
2. **Clarity of presentation** - Is the writing clear and accessible?
3. **Completeness of evidence** - Are key findings documented?
4. **Suggested improvements** - What would strengthen the paper?

Return feedback to: `WHITE-PAPER/reviewers/from_reviewers/{reviewer}/`

---

*Package extracted from WHITE-PAPER/ for NSF / DARPA / Open Philanthropy submission review.*